fixes sticky and choices spacing

--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -62,6 +62,7 @@ h1 {
 
 .results-container {
   font-family: @df-sans;
+  position: -webkit-sticky;
   position: sticky;
   top: 0px;
   background-color: white;
@@ -154,6 +155,10 @@ h1 {
   @media @mobile {
     .flex-wrap(wrap);
     font-size: 18px;
+
+    .yes-no & {
+      .flex-wrap(nowrap);
+    }
   }
 
   input[type="radio"] {
@@ -172,7 +177,7 @@ h1 {
       .flex(0 0 48%);
 
       .yes-no & {
-        .flex(0 0 33%);
+        .flex(0 0 30%);
       }
 
       @media @mobile { // separates choices for mobile
